saves/test/demo_full_20240802_193545/kmap4/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp kmap4_tb.v kmap4.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
kmap4_tb.v:110: $finish called at 16000 (1ps)

iverilog cmd 2 error:

